[gd_scene load_steps=7 format=3 uid="uid://bnlqp874d0nxm"]

[ext_resource type="Script" path="res://Environment/DropSpike.gd" id="1_j5crx"]
[ext_resource type="Texture2D" uid="uid://bc2tqw4r1l2pc" path="res://Assets/Rooms/Spike.png" id="2_j2vaa"]
[ext_resource type="Texture2D" uid="uid://l1mu3d4to7iu" path="res://Assets/Rooms/Spike_tip.png" id="3_oxyrh"]

[sub_resource type="Animation" id="Animation_vge2i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_aih82"]
resource_name = "Shake"
length = 2.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionPolygon2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(-10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-10, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(0, 0), Vector2(-20, 0), Vector2(-10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PointLight2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1, 2.4, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(10, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mf42t"]
_data = {
"RESET": SubResource("Animation_vge2i"),
"Shake": SubResource("Animation_aih82")
}

[node name="DropSpike" type="RigidBody2D"]
mass = 1000.0
gravity_scale = 4.0
freeze = true
freeze_mode = 1
script = ExtResource("1_j5crx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 3.14159
scale = Vector2(2, 2)
polygon = PackedVector2Array(-19.5, 32.4, 9.50002, 32.4001, -3.99982, -33.0999)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
rotation = 3.14159
scale = Vector2(2, 2)
polygon = PackedVector2Array(-21.5, 32.4, 11, 32.4001, -0.999814, -34.0999, -5.99981, -34.0999)

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
texture = ExtResource("2_j2vaa")

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(-13.9996, 1.60038)
collision_layer = 0
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="DetectionArea"]
scale = Vector2(2, 2)
polygon = PackedVector2Array(6, 0, 322, 1084, -334, 1084)

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mf42t")
}
speed_scale = 2.0

[node name="PointLight2D" type="PointLight2D" parent="."]
rotation = 3.14159
energy = 2.0
shadow_enabled = true
texture = ExtResource("3_oxyrh")

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_exited"]
